[package]
name = "akv"
version = "0.1.2"
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
description = "Safe bindings for libarchive with minimum overhead"
homepage = "https://github.com/patr0nus/akv"
repository = "https://github.com/patr0nus/akv"

[dependencies]
libarchive_src = { version = "0.1.2", path = "libarchive_src" }
libc = "0.2"
always-assert = "0.2"

[workspace]
members = ["libarchive_src"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
